--- a/where_next/package.json
+++ b/where_next/package.json
@@ -13,13 +13,16 @@
     "bootstrap": "^5.2.3",
     "firebase": "^9.17.1",
     "jquery": "^3.6.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.7",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-use-websocket": "^4.3.1",
     "slick-carousel": "^1.8.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
