--- a/where_next/package.json
+++ b/where_next/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "firebase": "^9.17.1",
     "jquery": "^3.6.3",
     "moment": "^2.29.4",
