--- a/where_next/package.json
+++ b/where_next/package.json
@@ -25,6 +25,7 @@
     "react-slick": "^0.29.0",
     "react-use-websocket": "^4.3.1",
     "slick-carousel": "^1.8.1",
+    "sweetalert": "^2.1.2",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
